@@ -1,0 +1,24 @@
+Package: RRPP
+Date: 2019-03-24
+Type: Package
+Title: Linear Model Evaluation with Randomized Residuals in a Permutation Procedure
+Version: 0.4.0.9000
+Author: Michael Collyer, Dean Adams
+Maintainer: Michael Collyer <mlcollyer@gmail.com>
+Description: Linear model calculations are made for many random versions of data.  
+    Using residual randomization in a permutation procedure, sums of squares are 
+    calculated over many permutations to generate empirical probability distributions 
+    for evaluating model effects.  This packaged is described by 
+    Collyer & Adams (2018) <doi:10.1111/2041-210X.13029>.  Additionally, coefficients, statistics, fitted values, and residuals generated over many 
+    permutations can be used for various procedures including pairwise tests, prediction, classification, and
+    model comparison.  This package should provide most tools one could need for the analysis of
+    high-dimensional data, especially in ecology and evolutionary biology, but certainly other fields, as well.
+License: GPL (>= 2)
+URL: https://github.com/mlcollyer/RRPP
+Encoding: UTF-8
+LazyData: true
+RoxygenNote: 6.1.1
+Suggests: knitr,
+    rmarkdown,
+    testthat
+VignetteBuilder: knitr
